<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_md"
        style="@style/TextAppearance.AppCompat.Title"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stop_button"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/start_button_label"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_button"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/stop_button_label"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:id="@+id/red_horse_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_button"
        android:text="@string/red_horse_name"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginHorizontal="@dimen/spacing_md"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/red"
        />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/red_horse_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/red_horse_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/red_horse_text"
        app:layout_constraintBottom_toBottomOf="@id/red_horse_text"
        android:layout_marginHorizontal="@dimen/spacing_md"
        app:trackColor="@color/red_shadow"
        app:indicatorColor="@color/red"
        android:indeterminate="true"
        />

    <TextView
        android:id="@+id/green_horse_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red_horse_text"
        android:text="@string/green_horse_name"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginHorizontal="@dimen/spacing_md"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/green"
        />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/green_horse_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/red_horse_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/green_horse_text"
        app:layout_constraintBottom_toBottomOf="@id/green_horse_text"
        android:layout_marginHorizontal="@dimen/spacing_md"
        app:trackColor="@color/green_shadow"
        app:indicatorColor="@color/green"
        android:indeterminate="true"
        />

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/green_horse_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_md"
        style="@style/TextAppearance.AppCompat.Large"
        />

</androidx.constraintlayout.widget.ConstraintLayout>